--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,290 @@
 .App {
-  text-align: center;
+    font-family: 'Roboto', Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+    background-color: #f4f6f8;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.home-button {
+    display: flex;
+    align-items: center;
+    background-color: #2196F3;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.home-button:hover {
+    background-color: #1976D2;
 }
 
-.App-link {
-  color: #61dafb;
+.home-button .home-icon {
+    margin-right: 10px;
+    font-size: 20px;
+    background-color: #2196F3
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    gap: 30px;
 }
+
+.shopping-list-container,
+.members-container {
+    border: 1px solid #ddd;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #ffffff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.shopping-list-container {
+    flex: 2;
+}
+
+.members-container {
+    flex: 1;
+}
+
+.filter-buttons {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 15px;
+    justify-content: center;
+}
+
+.filter-buttons button {
+    background-color: #90CAF9;
+    color: #0D47A1;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.filter-buttons button:hover {
+    background-color: #64B5F6;
+}
+
+button {
+    padding: 8px 12px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    opacity: 0.9;
+}
+
+.shopping-item {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    margin: 5px 0;
+    border-radius: 5px;
+    background-color: #f9fafb;
+}
+
+.shopping-item.resolved {
+    text-decoration: line-through;
+    color: #9e9e9e;
+    background-color: #e0e0e0;
+}
+
+.shopping-item .item-name {
+    flex: 1;
+    text-align: left;
+    font-size: 16px;
+    color: #424242;
+}
+
+.shopping-item button {
+    background: none;
+    color: #424242;
+    margin-left: 5px;
+}
+
+.shopping-item button:hover {
+    color: #212121;
+}
+
+.add-item-button,
+.add-member-button {
+    background-color: #2196F3;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    margin-top: 20px;
+    width: 100%;
+    font-size: 16px;
+}
+
+.add-item-button:hover,
+.add-member-button:hover {
+    background-color: #1976D2;
+}
+
+.member-item {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    margin: 5px 0;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+
+.member-name {
+    flex: 1;
+    font-size: 16px;
+    color: #424242;
+}
+
+.member-item button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+}
+
+.member-item button:hover .member-remove-icon {
+    opacity: 0.7;
+}
+
+.member-remove-icon {
+    width: 24px;
+    height: 24px;
+}
+
+.user-info {
+    text-align: right;
+}
+
+.user-info h2 {
+    font-size: 20px;
+    margin-bottom: 5px;
+}
+
+.user-info p {
+    font-size: 14px;
+    color: #616161;
+}
+
+.remove-self-button {
+    background-color: #f44336;
+    color: white;
+    padding: 8px 16px;
+    margin-top: 10px;
+}
+
+.remove-self-button:hover {
+    background-color: #d32f2f;
+}
+
+input[type="text"] {
+    padding: 10px;
+    border: 1px solid #bdbdbd;
+    border-radius: 5px;
+    width: 100%;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+h2 {
+    font-size: 24px;
+    color: #212121;
+    margin-bottom: 15px;
+    text-align:center;
+}
+
+.shopping-list-header h2 {
+    display: flex;
+    align-items: center;
+}
+
+.shopping-list-header h2 button {
+    margin-left: 10px;
+    background: none;
+    color: #424242;
+    font-size: 20px;
+}
+
+.shopping-list-header h2 button:hover {
+    color: #212121;
+}
+
+/* don't know how to test it
+@media (max-width: 768px) {
+    .main-content {
+        flex-direction: column;
+    }
+
+    .shopping-list-container,
+    .members-container {
+        width: 100%;
+    }
+}
+*/
+.list-name-header {
+    text-align: center;
+    font-size: 24px;
+    color: #212121;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.list-name-header button {
+    margin-left: 10px;
+    background: none;
+    color: #424242;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.list-name-header button:hover {
+    color: #212121;
+}
+
+/* input edit */
+.list-name-header input[type="text"] {
+    font-size: 24px;
+    padding: 5px;
+    width: auto;
+}
+
+.list-name-header button {
+    padding: 5px 10px;
+    font-size: 16px;
+    margin-left: 10px;
+}
+
+
+
+
+
+
+
+
