--- a/src/components/MemberSelectionModal.css
+++ b/src/components/MemberSelectionModal.css
@@ -1,6 +1,6 @@
 /* css for MemberSelectionModal.js */
 
-
+ /*
 
 .modal-overlay {
     position: fixed;
@@ -54,3 +54,4 @@
     font-size: 16px;
     cursor: pointer;
 }
+*/
