--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    margin-left: 20px;
 }
 
 .home-button:hover {
@@ -40,27 +41,33 @@
 }
 
 .main-content {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    gap: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 20px;
+  width: 100%;
 }
 
 .shopping-list-container,
 .members-container {
-    border: 1px solid #ddd;
-    padding: 20px;
-    border-radius: 10px;
-    background-color: #ffffff;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  flex: 1;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
 }
 
 .shopping-list-container {
     flex: 2;
 }
 
-.members-container {
-    flex: 1;
+.shopping-list-container {
+  flex: 1;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
 }
 
 .filter-buttons {
@@ -70,18 +77,28 @@
     justify-content: center;
 }
 
+.filter-buttons {
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+  margin: 10px 0;
+}
+
 .filter-buttons button {
-    background-color: #90CAF9;
-    color: #0D47A1;
-    padding: 8px 12px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+  padding: 10px 20px;
+  font-size: 1rem;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 20px;
 }
 
 .filter-buttons button:hover {
-    background-color: #64B5F6;
+  background-color: #0056b3;
 }
+
 
 button {
     padding: 8px 12px;
@@ -183,6 +200,7 @@ button:hover {
 .user-info h2 {
     font-size: 20px;
     margin-bottom: 5px;
+    margin-right: 20px;
 }
 
 .user-info p {
@@ -215,6 +233,7 @@ h2 {
     color: #212121;
     margin-bottom: 15px;
     text-align:center;
+    margin-right: 20px;
 }
 
 .shopping-list-header h2 {
@@ -268,7 +287,6 @@ h2 {
     color: #212121;
 }
 
-/* input edit */
 .list-name-header input[type="text"] {
     font-size: 24px;
     padding: 5px;
@@ -280,6 +298,32 @@ h2 {
     font-size: 16px;
     margin-left: 10px;
 }
+
+.shopping-lists {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.shopping-list-tile {
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-align: center;
+  cursor: pointer;
+  margin-left: 20px;
+}
+
+.shopping-list-tile h3 {
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+
+.shopping-list-tile button {
+  margin: 5px;
+}
+
 
 
 
